--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/sunnyCandy"
+        android:icon="@mipmap/zency"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/sunnyCandy"
+        android:roundIcon="@mipmap/zency"
         android:supportsRtl="true"
         android:theme="@style/Theme.SunnyCandy"
         tools:targetApi="31">
