增加页面跳转

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.SunnyCandy"
         tools:targetApi="31">
         <activity
+            android:name=".ui.Timer"
+            android:exported="false"
+            android:label="@string/title_activity_timer"
+            android:theme="@style/Theme.SunnyCandy.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
