--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- 声明 ReminderWorker 的服务 -->
+        <service
+            android:name=".service.ReminderWorker"
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE">
+            <meta-data
+                android:name="android.workmanager.WorkerFactory"
+                android:value="androidx.work.impl.WorkerWrapperFactory" />
+        </service>
     </application>
 
 </manifest>
